examples/type_system/failing/139_match_scrutinee_constraint_no_propagation_mixed_family.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn add(a: Int, b: Int) -> Int { a + b }

fn main() -> Unit {
    let x = mystery_value
    let _y = match x {
        Some(n) -> n,
        Left(l) -> l,
        _ -> 0,
    }
    let _z = add(1)
}
